--- a/cpanel.yml
+++ b/cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
       tasks:
         - export DEPLOYPATH=/home/grovqbrq/grover-webpage/
-        - /bin/cp -r * $DEPLOYPATH                        #copy all recursively to $DEPLOYPATH
+        - /bin/cp -r * $DEPLOYPATH
